[gd_scene load_steps=19 format=2]

[ext_resource path="res://Table/GUI.gd" type="Script" id=1]
[ext_resource path="res://asset/fonts/RobotoMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://table/HUD_font.tres" type="DynamicFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.819608, 0.258824, 0.258824, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.486275, 0.0784314, 0.0784314, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.654902, 0.121569, 0.121569, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.208807, 0.37079, 0.765625, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0117647, 0.168627, 0.54902, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0666667, 0.294118, 0.713726, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.227451, 0.631373, 0.298039, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0117647, 0.411765, 0.0823529, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.00392157, 0.572549, 0.105882, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 0.0156863, 0.0156863, 1 )

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 2 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Control"]
margin_right = 1920.0
margin_bottom = 941.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0

[node name="MC" type="MarginContainer" parent="Control"]
margin_top = 945.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50
custom_constants/margin_left = 0
custom_constants/margin_bottom = 10

[node name="HC" type="HBoxContainer" parent="Control/MC"]
margin_right = 1870.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MC/HC"]
margin_right = 465.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MC/HC/VBoxContainer"]
margin_right = 465.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="Control/MC/HC/VBoxContainer/HBoxContainer"]
margin_right = 230.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Login"

[node name="Button2" type="Button" parent="Control/MC/HC/VBoxContainer/HBoxContainer"]
margin_left = 234.0
margin_right = 465.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Enter"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/MC/HC/VBoxContainer"]
margin_top = 64.0
margin_right = 465.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ready" type="Button" parent="Control/MC/HC/VBoxContainer/HBoxContainer2"]
margin_right = 230.0
margin_bottom = 61.0
size_flags_horizontal = 3
text = "ready"

[node name="Button2" type="Button" parent="Control/MC/HC/VBoxContainer/HBoxContainer2"]
margin_left = 234.0
margin_right = 465.0
margin_bottom = 61.0
size_flags_horizontal = 3
text = "sit out"

[node name="VC" type="VBoxContainer" parent="Control/MC/HC"]
margin_left = 469.0
margin_right = 1400.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="Bets" type="HBoxContainer" parent="Control/MC/HC/VC"]
margin_right = 931.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="bet1" type="Button" parent="Control/MC/HC/VC/Bets"]
margin_right = 183.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
text = "Min"

[node name="bet2" type="Button" parent="Control/MC/HC/VC/Bets"]
margin_left = 187.0
margin_right = 370.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
text = "30%"

[node name="bet3" type="Button" parent="Control/MC/HC/VC/Bets"]
margin_left = 374.0
margin_right = 557.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
text = "50%"

[node name="bet4" type="Button" parent="Control/MC/HC/VC/Bets"]
margin_left = 561.0
margin_right = 744.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
text = "70%"

[node name="bet5" type="Button" parent="Control/MC/HC/VC/Bets"]
margin_left = 748.0
margin_right = 931.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
text = "Max"

[node name="HC2" type="HBoxContainer" parent="Control/MC/HC/VC"]
margin_top = 64.0
margin_right = 931.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Fold" type="Button" parent="Control/MC/HC/VC/HC2"]
margin_right = 307.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = ExtResource( 3 )
text = "Fold"

[node name="CheckCall" type="Button" parent="Control/MC/HC/VC/HC2"]
margin_left = 311.0
margin_right = 619.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 3 )
text = "Check/Call"

[node name="BetRaise" type="Button" parent="Control/MC/HC/VC/HC2"]
margin_left = 623.0
margin_right = 931.0
margin_bottom = 61.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 3 )
text = "Bet/Raise"

[node name="VC2" type="VBoxContainer" parent="Control/MC/HC"]
margin_left = 1404.0
margin_right = 1870.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HC" type="HBoxContainer" parent="Control/MC/HC/VC2"]
margin_right = 466.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HC2" type="HBoxContainer" parent="Control/MC/HC/VC2"]
margin_top = 64.0
margin_right = 466.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Chip" type="LineEdit" parent="Control/MC/HC/VC2/HC2"]
margin_top = 12.0
margin_right = 154.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_fonts/font = SubResource( 10 )
expand_to_text_length = true

[node name="HC" type="HBoxContainer" parent="Control/MC/HC/VC2/HC2"]
margin_left = 158.0
margin_top = 14.0
margin_right = 466.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0

[node name="Minus" type="Button" parent="Control/MC/HC/VC2/HC2/HC"]
margin_right = 30.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 11 )
text = "-"

[node name="HSlider" type="HSlider" parent="Control/MC/HC/VC2/HC2/HC"]
margin_left = 34.0
margin_right = 274.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
custom_styles/slider = SubResource( 12 )
custom_styles/grabber_area_highlight = SubResource( 13 )
custom_styles/grabber_area = SubResource( 14 )
max_value = 10000.0

[node name="Plus" type="Button" parent="Control/MC/HC/VC2/HC2/HC"]
margin_left = 278.0
margin_right = 308.0
margin_bottom = 33.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 15 )
text = "+"
[connection signal="pressed" from="Control/MC/HC/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/MC/HC/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/MC/HC/VBoxContainer/HBoxContainer2/Ready" to="." method="_on_Ready_pressed"]
[connection signal="pressed" from="Control/MC/HC/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Control/MC/HC/VC/Bets/bet1" to="." method="_on_bet_val_pressed" binds= [ 0 ]]
[connection signal="pressed" from="Control/MC/HC/VC/Bets/bet2" to="." method="_on_bet_val_pressed" binds= [ 1 ]]
[connection signal="pressed" from="Control/MC/HC/VC/Bets/bet3" to="." method="_on_bet_val_pressed" binds= [ 2 ]]
[connection signal="pressed" from="Control/MC/HC/VC/Bets/bet4" to="." method="_on_bet_val_pressed" binds= [ 3 ]]
[connection signal="pressed" from="Control/MC/HC/VC/Bets/bet5" to="." method="_on_bet_val_pressed" binds= [ 4 ]]
[connection signal="pressed" from="Control/MC/HC/VC/HC2/Fold" to="." method="_on_Fold_pressed"]
[connection signal="pressed" from="Control/MC/HC/VC/HC2/CheckCall" to="." method="_on_CheckCall_pressed"]
[connection signal="pressed" from="Control/MC/HC/VC/HC2/BetRaise" to="." method="_on_BetRaise_pressed"]
[connection signal="focus_entered" from="Control/MC/HC/VC2/HC2/Chip" to="." method="_on_Chip_focus_entered"]
[connection signal="focus_exited" from="Control/MC/HC/VC2/HC2/Chip" to="." method="_on_Chip_focus_exited"]
[connection signal="text_entered" from="Control/MC/HC/VC2/HC2/Chip" to="." method="_on_Chip_text_entered"]
[connection signal="pressed" from="Control/MC/HC/VC2/HC2/HC/Minus" to="." method="_on_Minus_pressed"]
[connection signal="value_changed" from="Control/MC/HC/VC2/HC2/HC/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Control/MC/HC/VC2/HC2/HC/Plus" to="." method="_on_Plus_pressed"]
